Changes to the Text and color

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
-     <h1> Website building In-progress...</h1>
+  <body bgcolor="3399FF">
+     <h1 align="center"> Website building In-progress...</h1>
   </body>
 </html>
