css updates and upgrades

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
+  <body bgcolor="0099E6">
       <h1 align="center">This page will have more info about me!!</h1>
   </body>
 </html>
