--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./css/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
-    <title>𝕊𝕄 - Home</title>
+    <title>𝕊𝕄 - About Me</title>
     <style>
         body {
             min-height: 75rem;
@@ -45,7 +45,7 @@
 </svg>
 
 
-<<!-- Nav bar menu in blue -->
+<!-- Nav bar menu in blue -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
         <a class="navbar-brand" href="#">
