--- a/resume.html
+++ b/resume.html
@@ -48,9 +48,7 @@
 <!-- Nav bar menu in blue -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#">
-            <img src="./imgs/logos/sm.svg" alt="SM" alt="" width="30" height="24"
-                 class="d-inline-block align-text-top"> SAMPATH MEDARAMETLA
+        <a class="navbar-brand" href="#">SAMPATH MEDARAMETLA
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse" aria-controls="navbarCollapse"
@@ -60,7 +58,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse" align="center">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./aboutme.html">About Me</a>
@@ -102,11 +100,7 @@
             </a></li>
         </ul>
         <div class="col-md-4 d-flex align-items-center">
-            <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                <img src="./imgs/logos/sm.svg" alt="SM" alt="" width="30" height="24"
-                     class="d-inline-block align-text-top">
-            </a>
-            <span class="text-muted">© 2021 - 2022 Sampath Medarametla</span>
+            <span class="text-black-50">© 2021 - 2022 Sampath Medarametla</span>
         </div>
     </footer>
 </div>
