--- a/index.html
+++ b/index.html
@@ -4,19 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./css/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="./css/custom.css" rel="stylesheet" crossorigin="anonymous">
     <title>𝕊𝕄 - Home</title>
-    <style>
-        body {
-            min-height: 75rem;
-            padding-top: 4.5rem;
-        }
-
-        .bi {
-            vertical-align: -.125em;
-            fill: currentColor;
-        }
-
-    </style>
 </head>
 <body>
 
