--- a/resume.html
+++ b/resume.html
@@ -65,7 +65,10 @@
         </div>
     </div>
 </nav>
-
+<div class="container-fluid">
+    <iframe src="./resources/Resume_Sampath_Medarametla.pdf#toolbar=0&navpanes=0&scrollbar=0"
+            width="100%" height="1200px">
+</div>
 <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
@@ -76,7 +79,8 @@
                 </svg>
             </a></li>
             <li class="ms-3"><a class="text-muted"
-                                href="https://www.linkedin.com/in/smedarametla/" target="_blank">
+                                href="https://www.linkedin.com/in/smedarametla/"
+                                target="_blank">
                 <svg class="bi" width="24" height="24">
                     <use xlink:href="#linkedin"></use>
                 </svg>
