--- a/index.html
+++ b/index.html
@@ -4,49 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Sampath</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <!-- Navbar -->
-    <div class="navbar">
-        <div class="container">
-            <a href="#" class="logo">Sampath<span>Medarametla</span></a>
-            <img class="mobile-menu" id="mobile-cta" src="./imgs/icons/menu.svg" alt="menu icon for navigation items">
-            <nav>
-                <img src="./imgs/icons/x-icon.svg" class="mobile-menu-exit" id="mobile-exit" alt="">
-                <ul class="primary-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="./index.html#aboutme-section">About me</a></li>
-                    <li><a href="./index.html#projects-section">projects</a></li>
-                </ul>
-            </nav>
-        </div>
+<!-- Navbar -->
+<div class="navbar">
+    <div class="container">
+        <a href="#" class="logo">Sampath<span>Medarametla</span></a>
+        <img class="mobile-menu" id="mobile-cta" src="./imgs/icons/menu.svg" alt="menu icon for navigation items">
+        <nav>
+            <img src="./imgs/icons/x-icon.svg" class="mobile-menu-exit" id="mobile-exit" alt="">
+            <ul class="primary-nav">
+                <li class="active"><a style="color: #007Af3; font-weight: bold" href="#">Home</a></li>
+                <li><a href="index.html#aboutme-section" style="color: #007Af3;font-weight: bold">
+                    About me</a></li>
+                <li><a href="index.html#projects-section"
+                       style="color: #007Af3;font-weight: bold">projects</a></li
+            </ul>
+        </nav>
     </div>
-    <!-- Navbar end-->
+</div>
+<!-- Navbar end-->
 
-    <section class="hero">
-        <div class="container">
-            <div class="left-col">
-                <p class="subhead">Hey I'm</p>
-                <h1>Sampath Medarametla</h1>
-                <p class="subhead">Software Engineer</p>
-                <div class="aboutme-cta">
-                    <a href="#" class="primary-cta" download="./docs/SampathMedarametla_Resume.pdf">Download CV</a>
-                </div>
+<section class="hero">
+    <div class="container">
+        <div class="left-col">
+            <p class="subhead">Hey I'm</p>
+            <h1>Sampath Medarametla</h1>
+            <p class="subhead">Software Engineer</p>
+            <div class="aboutme-cta">
+                <a href="./docs/SampathMedarametla_Resume.pdf" class="primary-cta" download>Download CV</a>
             </div>
-            <img src="./imgs/icons/aboutme.svg" class="profile-img" alt="Profile picture of Sampath Medarametla">
         </div>
-    </section>
+        <img src="./imgs/icons/aboutme.svg" class="profile-img" alt="Profile picture of Sampath Medarametla">
+    </div>
+</section>
 
-    <section class="aboutme-section" id="aboutme-section">
-        <h1 align="center">About me</h1>
-        <div class="container">
-            <div class="aboutme-col">
+<section class="aboutme-section" id="aboutme-section">
+    <h1 align="center">About me</h1>
+    <div class="container">
+        <div class="aboutme-col">
             <p>
-              Hey there, myself Sampath Medarametla, accomplished software engineer with
-               5+ years experience working on e-commerce, AL/ML projects and expert in framework design,
-               software development and project management with proven record of handling and leading Global teams.
+                Hey there, myself Sampath Medarametla, accomplished software engineer with
+                5+ years experience working on e-commerce, AL/ML programs and expert in framework design,
+                software development and project management with proven record of handling and leading Global teams.
             </p>
             <p>
                 I did my Masters in Information Systems at Murray State University with a 3.75 GPA.
@@ -56,73 +58,54 @@
                 for the day, I love Volunteer work, reading and mentoring, Infact at some point of time
                 (probably after 20 years),i'd love to teach technology for upcoming generations.
             </p>
-            </div>
-            <img src="./imgs/profile-sampath.jpg" class="aboutme-img" alt="Profile picture of Sampath Medarametla">
         </div>
-    </section>
+        <img src="./imgs/profile-sampath.jpg" class="aboutme-img" alt="Profile picture of Sampath Medarametla">
+    </div>
+</section>
 
-    <section class="projects-section" id="projects-section">
-
-       <div class="container">
-           <ul>
+<section class="projects-section" id="projects-section">
+    <div class="container">
+        <ul>
             <li>
                 <img src="./imgs/icons/iot.svg" alt="">
                 <blockquote align="left">
                     Implemented Meeting Room finder, an IOT project which will help paterons to locate a meeting room,
-                    without moving around the office space, The room availability is determined based on the sensor 
+                    without moving around the office space, The room availability is determined based on the sensor
                     data (temperature, light) accquired from the meeting room.
                 </blockquote>
             </li>
-            <li>
-                   <img src="./imgs/icons/ai.svg" alt="">
-                   <blockquote align="left">
-                      Worked on training the AI/ML algorithms to process the images,
-                      helped towards improving geo-code accuracy for maps.
-                   </blockquote>
+        </ul>
+    </div>
+</section>
 
-            </li>
-            <li>
-                   <img src="./imgs/icons/mkting.svg" alt="">
-                   <blockquote align="left">
-                      Implemented Espresso email framework which utilizes the personalized data API's
-                      to render marketing content in the form of an email by utilizing the Freemarker templating language
-                   </blockquote>
-
-            </li>
-            
-           </ul>
-       </div>
-    </section>
-
-    <section class="social-section">
-        <h1 align="center">Let's connect</h1>
-        <div class="container">
-            <div class="social">
-                <ul class="social-nav">
-                    <li><a href="https://www.linkedin.com/in/smedarametla/" target="_blank">Linkedin</a></li>
-                    <li><a href="https://github.com/iamSampath" target="_blank">Github</a></li>
-                    <li><a href="mailto:reachtosampath@gmail.com">Email</a></li>
-                    <li><a href="https://medium.com/@sampathkm" target="_blank">Medium</a></li>
-                </ul>
-            </div>
+<section class="social-section">
+    <h1 align="center">Let's connect</h1>
+    <div class="container">
+        <div class="social">
+            <ul class="social-nav">
+                <li><a href="https://www.linkedin.com/in/smedarametla/" target="_blank">Linkedin</a></li>
+                <li><a href="https://github.com/iamSampath" target="_blank">Github</a></li>
+                <li><a href="mailto:reachtosampath@gmail.com">Email</a></li>
+                <li><a href="https://medium.com/@sampathkm" target="_blank">Medium</a></li>
+            </ul>
         </div>
-    </section>
+    </div>
+</section>
 
-    <hr NOSHADE>
-    <section class="footer">
-        <p align="center">&copy; 2021 Sampath Medarametla</p>
-    </section> 
-  
-    <script>
-        const mobileBtn = document.getElementById('mobile-cta')
-              nav = document.querySelector('nav')
-              mobileBtnExit = document.getElementById('mobile-exit');
-        mobileBtn.addEventListener('click', () => {
-            nav .classList.add('menu-btn');
-        })
-        mobileBtnExit.addEventListener('click', () => {
-            nav .classList.remove('menu-btn');
-        })
-    </script>
+<section class="footer">
+    <p align="center">&copy; 2021 Sampath Medarametla</p>
+</section>
+
+<script>
+    const mobileBtn = document.getElementById('mobile-cta')
+    nav = document.querySelector('nav')
+    mobileBtnExit = document.getElementById('mobile-exit');
+    mobileBtn.addEventListener('click', () => {
+        nav .classList.add('menu-btn');
+    })
+    mobileBtnExit.addEventListener('click', () => {
+        nav .classList.remove('menu-btn');
+    })
+</script>
 </body>
 </html>
