--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
         <nav>
             <img src="./imgs/icons/x-icon.svg" class="mobile-menu-exit" id="mobile-exit" alt="">
             <ul class="primary-nav">
-                <li class="active"><a style="color: #007Af3; font-weight: bold" href="#">Home</a></li>
-                <li><a href="index.html#aboutme-section" style="color: #007Af3;font-weight: bold">
-                    About me</a></li>
-                <li><a href="index.html#projects-section"
-                       style="color: #007Af3;font-weight: bold">projects</a></li
+                <li class="active"><a style="color: #007Af3;" href="#">Home</a></li>
+                <li><a href="index.html#aboutme-section" style="color: #007Af3;">About me</a></li>
+                <li><a href="index.html#projects-section" style="color: #007Af3;">projects</a></li>
             </ul>
         </nav>
     </div>
