Fixed download alignments

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <h1>Sampath Medarametla</h1>
             <p class="subhead">Software Engineer</p>
             <div class="aboutme-cta">
-                <a href="./docs/SampathMedarametla_Resume.pdf" class="primary-cta" download>Download CV</a>
+                <a href="./docs/SampathMedarametla_Resume.pdf" class="primary-cta"
+                   target="_blank" download>Download CV</a>
             </div>
         </div>
         <img src="./imgs/icons/aboutme.svg" class="profile-img" alt="Profile picture of Sampath Medarametla">
