--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="left-col">
             <p class="subhead">Hey I'm</p>
             <h1>Sampath Medarametla</h1>
-            <p class="subhead">Software Engineer</p>
+            <p class="subhead">Product Enthusiast</p>
             <div class="aboutme-cta">
                 <a href="./docs/SampathMedarametla_Resume.pdf" class="primary-cta"
                    target="_blank" download>Download CV</a>
@@ -54,17 +54,17 @@
     <div class="container">
         <div class="aboutme-col">
             <p>
-                Hey there, myself Sampath Medarametla, accomplished software engineer with
-                5+ years experience working on e-commerce, AL/ML programs and expert in framework design,
-                software development and project management with proven record of handling and leading Global teams.
+                Hey there, myself Sampath Medarametla, Product Enthusiast and Accomplished Team lead
+                with experience working on e-commerce, AL/ML, Digital Marketing programs and expert in product and
+                 project management with proven record of handling and leading Global teams.
             </p>
             <p>
                 I did my Masters in Information Systems at Murray State University with a 3.75 GPA.
             </p>
             <p>
-                I like to learn new things, it always makes me stay happy and gives me a sense of accomplishment
-                for the day, I love Volunteer work, reading and mentoring, Infact at some point of time
-                (probably after 20 years),i'd love to teach technology for upcoming generations.
+                I have been a Product Manager, Project Manager and software engineer in my career so far.
+                I love Volunteering, reading and mentoring, Infact at some point of time (probably after 20 years),i'd love to teach
+                technology for upcoming generations, Hopefully AI doesn't start teaching student by then :).
             </p>
         </div>
         <img src="./imgs/profile-sampath.jpg" class="aboutme-img" alt="Profile picture of Sampath Medarametla">
