Updated project description

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             <li>
                 <img src="./imgs/icons/iot.svg" alt="">
                 <blockquote align="left">
-                    Implemented Meeting Room finder, an IOT project which will help paterons to locate a meeting room,
-                    without moving around the office space, The room availability is determined based on the sensor
-                    data (temperature, light) accquired from the meeting room.
+                    Managed and built User Interface for  "Meeting room finder," which helped colleagues to locate a meeting room available in the office space without friction.
+                    It utilizes the room data (temperature, light) acquired from the meeting room and suggests an empty Meeting space based on the data.
+                    The project is intelligent in predicting and offering available rooms. 
                 </blockquote>
             </li>
         </ul>
