--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 <img src="./imgs/icons/iot.svg" alt="">
                 <blockquote align="left">
                     Managed and built User Interface for  "Meeting room finder," which helped colleagues to locate a meeting room available in the office space without friction.
-                    It utilizes the room data (temperature, light) acquired from the meeting room and suggests an empty Meeting space based on the data.
-                    The project is intelligent in predicting and offering available rooms. 
+                    It utilizes the room data (temperature, light) acquired from the meeting room sensors and suggests an empty Meeting space based on the data.
+                    The project is intelligent enough to predict and suggest available Meeting spaces. 
                 </blockquote>
             </li>
         </ul>
