--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
     <div class="container">
         <div class="aboutme-col">
             <p>
-                Hey there, myself Sampath Medarametla, Product Enthusiast and Accomplished Team lead
-                with experience working on e-commerce, AL/ML, Digital Marketing programs and expert in product and
-                 project management with proven record of handling and leading Global teams.
+                Hey there, myself Sampath Medarametla, Product Enthusiast, Project Manager and accomplished Team lead
+                with experience working on e-commerce, Search, ML and Digital Marketing programs, with proven experince of leading global teams.
             </p>
             <p>
                 I did my Masters in Information Systems at Murray State University with a 3.75 GPA.
             </p>
             <p>
-                I have been a Product Manager, Project Manager and software engineer in my career so far.
-                I love Volunteering, reading and mentoring, Infact at some point of time (probably after 20 years),i'd love to teach
-                technology for upcoming generations, Hopefully AI doesn't start teaching student by then :).
+                I love Travelling, Volunteering, reading, and mentoring, and recently I started with night sky watching.
+                I believe in working for something that could make human lives better.
+                i am a strong supporter of "Knowledge reception and radiation" because knowledge is a two way street between self and world,
+                so i occasionally write to give the knowledge so that other can benefit out of it.
             </p>
         </div>
         <img src="./imgs/profile-sampath.jpg" class="aboutme-img" alt="Profile picture of Sampath Medarametla">
