--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
         <div class="left-col">
             <p class="subhead">Hey I'm</p>
-            <h1>Sampath Medarametla</h1>
+            <h1>Sampath Medarametla,PMP®</h1>
             <p class="subhead">Product Enthusiast</p>
             <div class="aboutme-cta">
                 <a href="./docs/SampathMedarametla_Resume.pdf" class="primary-cta"
@@ -101,7 +101,8 @@
 </section>
 
 <section class="footer">
-    <p align="center">&copy; 2021 Sampath Medarametla</p>
+    <p align="center">&copy;<script type="text/JavaScript"> document.write(new Date().getFullYear());        
+    </script> Sampath Medarametla</p>  
 </section>
 
 <script>
