--- a/index.html
+++ b/index.html
@@ -54,14 +54,15 @@
     <div class="container">
         <div class="aboutme-col">
             <p>
-                Hey there, myself Sampath Medarametla, Product Enthusiast, Project Manager and accomplished Team lead
-                with experience working on e-commerce, Search, ML and Digital Marketing programs, with proven experince of leading global teams.
+                Hey there, myself Sampath Medarametla, Project Manager, Product Enthusiast, and accomplished
+                Team lead with experience working on e-commerce, Search, ML, and Digital Marketing programs,
+                with proven experience in leading global teams.
             </p>
             <p>
-                I did my Masters in Information Systems at Murray State University with a 3.75 GPA.
+                I Graduated from Murray State University with specialization in information Systems.
             </p>
             <p>
-                I love Travelling, Volunteering, reading, and mentoring, and recently I started with night sky watching.
+                I have a passion for traveling, volunteering, reading, mentoring, and recently I added night sky watching to my interests.
                 I believe in working for something that could make human lives better.
                 i am a strong supporter of "Knowledge reception and radiation" because knowledge is a two way street between self and world,
                 so i occasionally write to give the knowledge so that other can benefit out of it.
