--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="left-col">
             <p class="subhead">Hey I'm</p>
             <h1>Sampath Medarametla,PMP®</h1>
-            <p class="subhead">Product Enthusiast</p>
+            <p class="subhead">Project Manager</p>
             <div class="aboutme-cta">
                 <a href="./docs/SampathMedarametla_Resume.pdf" class="primary-cta"
                    target="_blank" download>Download CV</a>
