--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <li><a href="https://www.linkedin.com/in/smedarametla/" target="_blank">Linkedin</a></li>
                 <li><a href="https://github.com/iamSampath" target="_blank">Github</a></li>
                 <li><a href="mailto:reachtosampath@gmail.com">Email</a></li>
-                <li><a href="https://medium.com/@sampathkm" target="_blank">Medium</a></li>
+                <li><a href="https://medium.com/@thethoughtgalvanizer" target="_blank">Medium</a></li>
             </ul>
         </div>
     </div>
