--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <div class="container">
         <div class="left-col">
             <p class="subhead">Hey I'm</p>
-            <h1>Sampath Medarametla,PMP®</h1>
-            <p class="subhead">Project Manager</p>
+            <h1>Sampath Medarametla,PMP</h1>
+            <p class="subhead">Project Manager | Product Enthusiast | Team Lead </p>
             <div class="aboutme-cta">
                 <a href="./docs/SampathMedarametla_Resume.pdf" class="primary-cta"
                    target="_blank" download>Download CV</a>
@@ -54,19 +54,35 @@
     <div class="container">
         <div class="aboutme-col">
             <p>
-                Hey there, myself Sampath Medarametla, Project Manager, Product Enthusiast, and accomplished
-                Team lead with experience working on e-commerce, Search, ML, and Digital Marketing programs,
-                with proven experience in leading global teams.
+                Hi! I'm Sampath Medarametla, a Project Manager, Product Enthusiast, and accomplished 
+                Team Lead with experience working on e-commerce, Search, ML, and Digital Marketing programs.
+                I have a proven track record of leading global teams and delivering successful projects.
             </p>
             <p>
-                I Graduated from Murray State University with specialization in information Systems.
+                I graduated from Murray State University with a specialization in Information Systems. 
+                I'm passionate about using technology to make a positive impact on the world. 
+                I'm also a strong believer in knowledge sharing, and I love to write about my experiences and insights in the hopes of helping others.
+            <br>
+                In my free time, I enjoy traveling, volunteering, reading, mentoring, and night sky watching.
+            </p>
+            <h3>Why I do what I do</h3>
+            <p>
+               I believe in working for something that could make human lives better. 
+               That's why I'm passionate about project management and product development. 
+               I love the challenge of taking a complex problem and breaking it down into manageable steps. 
+               I also enjoy working with teams of talented people to bring new products and services to life.
             </p>
             <p>
-                I have a passion for traveling, volunteering, reading, mentoring, and recently I added night sky watching to my interests.
-                I believe in working for something that could make human lives better.
-                i am a strong supporter of "Knowledge reception and radiation" because knowledge is a two way street between self and world,
-                so i occasionally write to give the knowledge so that other can benefit out of it.
+                I'm also a strong supporter of knowledge sharing. I believe that knowledge is a two-way street between the self and the world. 
+                That's why I occasionally write about my experiences and insights in the hopes of helping others.
             </p>
+            <br>
+            <p>
+                I hope this intro gives you a better sense of who I am and what I do. If you have any questions, 
+                please don't hesitate to contact me.
+            </p>
+
+       
         </div>
         <img src="./imgs/profile-sampath.jpg" class="aboutme-img" alt="Profile picture of Sampath Medarametla">
     </div>
