--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="left-col">
             <p class="subhead">Hey I'm</p>
             <h1>Sampath Medarametla,PMP</h1>
-            <p class="subhead">Project Manager | Product Enthusiast | Team Lead </p>
+            <p class="subhead">Project Manager|Product Enthusiast|Team Lead</p>
             <div class="aboutme-cta">
                 <a href="./docs/SampathMedarametla_Resume.pdf" class="primary-cta"
                    target="_blank" download>Download CV</a>
@@ -81,10 +81,7 @@
                 I hope this intro gives you a better sense of who I am and what I do. If you have any questions, 
                 please don't hesitate to contact me.
             </p>
-
-       
         </div>
-        <img src="./imgs/profile-sampath.jpg" class="aboutme-img" alt="Profile picture of Sampath Medarametla">
     </div>
 </section>
 
@@ -94,7 +91,7 @@
             <li>
                 <img src="./imgs/icons/iot.svg" alt="">
                 <blockquote align="left">
-                    Managed and built User Interface for  "Meeting room finder," which helped colleagues to locate a meeting room available in the office space without friction.
+                    Managed and built a User Interface for  "Meeting room finder," which helped colleagues to locate a meeting room available in the office space without friction.
                     It utilizes the room data (temperature, light) acquired from the meeting room sensors and suggests an empty Meeting space based on the data.
                     The project is intelligent enough to predict and suggest available Meeting spaces. 
                 </blockquote>
