--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 That's why I occasionally write about my experiences and insights in the hopes of helping others.
             </p>
             <p>
-                I hope this intro gives you a better sense of who I am and what I do. If you have any questions, 
-                please don't hesitate to contact me.
+                I hope this intro gives you a better sense of who I am and what I do. I am open to collaborating on projects which could
+                potentially make a difference for people, have one such idea ?, Don't hesitate to contact me.
             </p>
         </div>
     </div>
