--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
     <div class="container">
         <div class="aboutme-col">
             <p>
-                Hi! I'm Sampath Medarametla, a Project Manager, Product Enthusiast, and accomplished 
+                Hi! I'm Sampath Medarametla, a Program/Project Manager, Product Enthusiast, and accomplished 
                 Team Lead with experience working on e-commerce, Search, ML, and Digital Marketing programs.
                 I have a proven track record of leading global teams and delivering successful projects.
             </p>
             <p>
                 I graduated from Murray State University with a specialization in Information Systems. 
-                I'm passionate about using technology to make a positive impact on the world. 
+                I'm passionate about using technology to positively impact the world. 
                 I'm also a strong believer in knowledge sharing, and I love to write about my experiences and insights in the hopes of helping others.
             </p>
             <P>
-                In my free time, I enjoy traveling, volunteering, reading, mentoring, and night sky watching.
+                I enjoy traveling, volunteering, reading, mentoring, and watching the night sky in my free time.
             </P>
             <h3>Why I do what I do</h3>
             <p>
