--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                    target="_blank" download>Download CV</a>
             </div>
         </div>
-        <img src="./imgs/icons/aboutme.svg" class="profile-img" alt="Profile picture of Sampath Medarametla">
+        <img src="./imgs/icons/aboutme.png" class="profile-img" alt="Profile picture of Sampath Medarametla">
     </div>
 </section>
 
