--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <ul class="social-nav">
                 <li><a href="https://www.linkedin.com/in/smedarametla/" target="_blank">Linkedin</a></li>
                 <li><a href="https://github.com/iamSampath" target="_blank">Github</a></li>
-                <li><a href="mailto:reachtosampath@gmail.com">Email</a></li>
+                <li><a href="mailto:sampathkm09@yahoo.com">Email</a></li>
                 <li><a href="https://medium.com/@thethoughtgalvanizer" target="_blank">Medium</a></li>
             </ul>
         </div>
