--- a/index.html
+++ b/index.html
@@ -289,20 +289,13 @@
       <h2>Credentials</h2>
       <div class="rule" aria-hidden="true"></div>
       <p><strong>Education:</strong> M.S., Information Systems — Murray State University (Murray, KY)</p>
-      <p><strong>Certifications:</strong> Project Management Professional (PMP) — 01/2023–01/2029</p>
-      <p><strong>Involvement:</strong> AITP — coordinated weekly STEM tutoring for ~20 students; led charity events raising $5K for the business department. IT's Elite Club — led 5 committees to organize campus events and drive engagement.</p>
+      <p><strong>Certifications:</strong> Project Management Professional (PMP) </p>
     </section>
 
     <section class="wrap reveal">
       <h2>Thesis</h2>
       <div class="rule" aria-hidden="true"></div>
       <blockquote>Ship value early, keep the feedback loop tight, and let teams move at the speed of clarity.</blockquote>
-    </section>
-
-    <section id="writing" class="wrap reveal">
-      <h2>Writing</h2>
-      <div class="rule" aria-hidden="true"></div>
-      <p><a class="uline" href="https://medium.com/@sampathkmpm" target="_blank" rel="noopener">Essays on program leadership</a> · <a class="uline" href="#">Program Ops for AI Platforms (slides)</a></p>
     </section>
 
     <section id="contact" class="wrap reveal">
